Update CSS to new standards

--- a/src/epub/css/local.css
+++ b/src/epub/css/local.css
@@ -48,6 +48,7 @@ span.elision{
 
 [epub|type~="z3998:drama"] td[epub|type~="z3998:persona"]{
 	hyphens: none;
+	-epub-hyphens: none;
 	text-align: right;
 	width: 2em;
 }
