--- a/src/epub/css/local.css
+++ b/src/epub/css/local.css
@@ -21,8 +21,10 @@ span.elision{
 	margin-left: 3em;
 }
 
-[epub|type~="z3998:drama"]{
+[epub|type~="z3998:drama"] table{
 	border-collapse: collapse;
+	margin: 1em auto;
+	width: 100%;
 }
 
 [epub|type~="z3998:drama"] tr:first-child td{
