--- a/src/epub/css/local.css
+++ b/src/epub/css/local.css
@@ -10,6 +10,10 @@ body [xml|lang]{
 	font-style: italic;
 }
 
+body cite i[xml|lang]{
+	font-style: normal;
+}
+
 header{
 	font-variant: small-caps;
 	margin: 1em;
